--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
-encoding//src/Problem.java=UTF-8
+encoding//src/mjj/euler/logic/Problem.java=UTF-8
+encoding//src/mjj/euler/problems/Problem.java=UTF-8
+encoding//src/mjj/euler/problems/Problem023.java=UTF-8
+encoding//src/mjj/euler/problems/Problem024.java=UTF-8
